recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:18: error: not found: value leverCrayon
  leverCrayon();
  ^